--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,32 +1,6 @@
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
-}
-
-.todo-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.todo-list li {
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
-}
-
-.todo-list li:last-child {
-  border-bottom: none;
-}
-
-.todo-list button {
-  background-color: #4CAF50;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.todo-list button:hover {
-  background-color: #3e8e41;
+  background: url('./Gambar3.jpg') no-repeat center center;
+  background-size: cover;
 }
